till SASS class

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <title>Coder Frontend</title>
   </head>
-  <body>  
+  <body>
     <header class="header">
       <img class="header__img" src="/img/logo-platzi.png" alt="" />
       <div class="header__menu">
@@ -34,10 +34,151 @@
       <input class="input" type="text" placeholder="Buscar..." />
     </section>
 
+    <h2 class="categories__title">Mi lista</h2>
+
     <section class="carousel">
       <div class="carousel__container">
         <div class="carousel-item">
-          <img class="carousel-item__img" src="/img/item1.jpg" alt="man-in-yellow-robe-walking-on-street-7165100" />
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?movie"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?walkin"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?weeding"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?ring"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?game"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?xD"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?stop"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?what"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?why"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
           <div class="carousel-item__details">
             <div>
               <img src="/img/play-icon.png" alt="Play" />
@@ -49,10 +190,325 @@
         </div>
       </div>
     </section>
+
+    <h2 class="categories__title">Tendencias</h2>
+
+    <section class="carousel">
+      <div class="carousel__container">
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?movie"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?walkin"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?weeding"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?ring"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?game"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?xD"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?stop"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?what"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?why"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <h2 class="categories__title">Originales de Platzi</h2>
+
+    <section class="carousel">
+      <div class="carousel__container">
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?movie"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?walkin"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?weeding"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?ring"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?game"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?xD"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?stop"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?what"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="https://source.unsplash.com/random?why"
+            alt="man-in-yellow-robe-walking-on-street-7165100"
+          />
+          <div class="carousel-item__details">
+            <div>
+              <img src="/img/play-icon.png" alt="Play" />
+              <img src="/img/plus-icon.png" alt="Plus" />
+            </div>
+            <p class="carousel-item__details--title">Titulo</p>
+            <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <footer class="footer">
-        <a href="">Términos de uso</a>
-        <a href="">Declaración de Privacidad</a>
-        <a href="">Centro de Ayuda</a>
+      <a href="">Términos de uso</a>
+      <a href="">Declaración de Privacidad</a>
+      <a href="">Centro de Ayuda</a>
     </footer>
   </body>
 </html>
